--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
         </div>
 
         <div class="row g-4 align-items-center mb-5">
-            <div class="col-lg-5 offset-lg-1">
-                <img src="./img/ChatGPT%20Image%2029%20giu%202025,%2019_31_01.png"
-                     class="img-fluid rounded hover-zoom" alt="Perfect Size">
-            </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 order-lg-2">
                 <h2 class="display-5 fw-bold mb-4">Always perfect size</h2>
                 <p class="text-muted">Our advanced sizing algorithm combines your measurements with garment-specific
                     data to ensure a perfect fit every time. We consider factors like fabric type, cut, and style to
                     recommend the ideal size. Plus, you can view detailed fit reviews from others with similar body
                     types. If something isn't quite right, we offer free size exchanges within 24 hours of delivery.</p>
+            </div>
+            <div class="col-lg-5 offset-lg-1 order-lg-1">
+                <img src="./img/ChatGPT%20Image%2029%20giu%202025,%2019_31_01.png"
+                     class="img-fluid rounded hover-zoom" alt="Perfect Size">
             </div>
         </div>
 
