added mocked review section

--- a/index.html
+++ b/index.html
@@ -172,6 +172,144 @@
     </div>
 </section>
 
+<!-- Reviews Section -->
+<section class="py-5 bg-light">
+    <div class="container">
+        <h2 class="text-center fw-bold mb-5">What Our Customers Say</h2>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card h-100 border-0 shadow-sm hover-effect">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://randomuser.me/api/portraits/women/1.jpg" class="rounded-circle me-3"
+                                 width="60" height="60" alt="User">
+                            <div>
+                                <h5 class="fw-bold mb-0">Viola</h5>
+                                <p class="text-muted mb-0">Digital nomad</p>
+                            </div>
+                        </div>
+                        <p class="text-muted">"I had an event in Milan but was traveling with only hand
+                            luggage. I booked an outfit with RentaLook and found it ready at the hotel!
+                            Fantastic."</p>
+                        <div class="text-warning">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 border-0 shadow-sm hover-effect">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://randomuser.me/api/portraits/men/1.jpg" class="rounded-circle me-3"
+                                 width="60" height="60" alt="User">
+                            <div>
+                                <h5 class="fw-bold mb-0">Michael</h5>
+                                <p class="text-muted mb-0">Business Professional</p>
+                            </div>
+                        </div>
+                        <p class="text-muted">"My airline lost my luggage before a crucial business meeting in Rome.
+                            RentaLook was a lifesaver! I ordered a suit and had it delivered to my hotel within hours.
+                            The fit was perfect, and I closed the deal looking sharp. This service turned a potential
+                            disaster into a success story."</p>
+                        <div class="text-warning">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-half"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100 border-0 shadow-sm hover-effect">
+                    <div class="card-body p-4">
+                        <div class="d-flex align-items-center mb-3">
+                            <img src="https://randomuser.me/api/portraits/women/2.jpg" class="rounded-circle me-3"
+                                 width="60" height="60" alt="User">
+                            <div>
+                                <h5 class="fw-bold mb-0">Emma</h5>
+                                <p class="text-muted mb-0">Consultant</p>
+                            </div>
+                        </div>
+                        <p class="text-muted">"Every week I have a different meeting in a new city. I couldn't bring 10
+                            outfits in my suitcase... now I use RentaLook as my mobile wardrobe."</p>
+                        <div class="text-warning">
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                            <i class="bi bi-star-fill"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- FAQ Section -->
+<section class="py-5">
+    <div class="container">
+        <h2 class="text-center fw-bold mb-5">Frequently Asked Questions</h2>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div class="accordion" id="faqAccordion">
+                    <div class="accordion-item border-0 mb-3 shadow-sm">
+                        <h3 class="accordion-header">
+                            <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faq1">
+                                How does the rental process work?
+                            </button>
+                        </h3>
+                        <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body text-muted">
+                                Browse our collection, select your items and rental period, and place your order. We'll
+                                deliver your clothes to your door. After your rental period, simply return them using
+                                our prepaid shipping label.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item border-0 mb-3 shadow-sm">
+                        <h3 class="accordion-header">
+                            <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faq2">
+                                What if the clothes don't fit?
+                            </button>
+                        </h3>
+                        <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body text-muted">
+                                We offer free size exchanges within 24 hours of delivery. Our sizing algorithm helps
+                                ensure the best fit, but if you need a different size, we'll expedite the exchange
+                                process.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item border-0 mb-3 shadow-sm">
+                        <h3 class="accordion-header">
+                            <button class="accordion-button fw-bold collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#faq3">
+                                How do you clean the clothes?
+                            </button>
+                        </h3>
+                        <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
+                            <div class="accordion-body text-muted">
+                                We use professional eco-friendly cleaning methods and follow strict hygiene protocols.
+                                Each item is thoroughly cleaned, inspected, and sanitized between rentals.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Newsletter Section -->
 <section class="py-5 bg-dark text-white">
     <div class="container">
@@ -185,10 +323,10 @@
                     <form action="https://formsubmit.co/adrian992011@gmail.com" method="POST" class="d-flex w-100">
                         <!-- Honeypot per evitare spam -->
                         <input type="text" name="_honey" style="display:none">
-                        
+
                         <!-- Disable Captcha -->
                         <input type="hidden" name="_captcha" value="false">
-                        
+
                         <!-- Redirect dopo l'invio -->
                         <input type="hidden" name="_next" value="http://localhost:63342/Landing/thanks.html">
 
